--- a/wp-content/themes/bikcraft/style.css
+++ b/wp-content/themes/bikcraft/style.css
@@ -7,8 +7,8 @@ Description: Tema criado para o Bikcraft
 Version: 1.0
 */
 
-@import "css/reset.css";
 @import "css/normalize.css";
+@import "css/reset.css";
 @import "css/grid.css";
 @import "css/contato.css";
 @import "css/portfolio.css";
@@ -18,7 +18,13 @@ Version: 1.0
 @import "css/simple-slide.css";
 @import "css/simple-anime.css";
 
+/* CUSTOMIZAÇÕES WORDPRESS */
+.customize-support .header{
+  margin-top: 32px;
+}
+
 /*ESTILOS GERAIS */
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -176,7 +182,7 @@ img {
   background-size: cover;
   margin-top: 92px;
   text-align: center;
-  padding-top: 40px;
+  padding-top: 80px;
 }
 
 .introducao h1 {
