--- a/wp-content/themes/bikcraft/style.css
+++ b/wp-content/themes/bikcraft/style.css
@@ -233,6 +233,10 @@ img {
   margin: 0 auto;
 }
 
+.produtos_list a{
+  color: #000;
+}
+
 .produtos_list li h3 {
   font-weight: bold;
   font-size: 18px;
